--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,19 @@
-click==7.1.2
-Flask==1.1.2
-Flask-Cors==3.0.8
-itsdangerous==1.1.0
-Jinja2==2.11.2
-joblib==0.14.1
-MarkupSafe==1.1.1
-nltk==3.5
-numpy==1.18.4
-pandas==1.0.3
+click==8.0.1
+colorama==0.4.4
+Flask==2.0.1
+Flask-Cors==3.0.10
+gunicorn==20.1.0
+itsdangerous==2.0.1
+Jinja2==3.0.1
+joblib==1.0.1
+MarkupSafe==2.0.1
+nltk==3.6.2
+numpy==1.20.3
+pandas==1.2.4
 python-dateutil==2.8.1
-pytz==2020.1
-regex==2020.4.4
-six==1.14.0
-tqdm==4.46.0
-Werkzeug==1.0.1
+pytz==2021.1
+regex==2021.4.4
+six==1.16.0
+tqdm==4.61.1
+waitress==2.0.0
+Werkzeug==2.0.1
